proj1/tests/other-tests/oskis-angels_tests/regexperts_tests/correct/assign_stmt.py
z = 1
x = y = 5
a, b ,c = 1, 2, 3
a, b, c = (1, 2, 3)
a, b, c = [1, 2, 3]
print x, y, a, b, c
