proj1/tests/other-tests/oskis-angels_tests/regexperts_tests/error/expr_complex_args.py
def foo(x, (y, z)):
	print y

foo(1, (2, 3))
